css: make sure load button is visible

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -66,6 +66,7 @@
     width: -webkit-fill-available;
     width: -moz-available;
     min-height: 600px;
+    min-width: 400px;
     height: -webkit-fill-available;
     height: -moz-available;
 }
